# cofi-challenge

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
cofi_store/: __init__.py  __main__.py  checkout.py  schemas.py
resources/: rules.json
tests/: constants.py  test_checkout.py  test_issuer.py  test_version.py
